--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test:
     parallelism: 1
     docker:
-      - image: circleci/ruby:2.7.0-stretch-node-browsers-legacy
+      - image: circleci/ruby:2.7.1-buster-node
         environment:
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
