--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,13 @@ jobs:
           PGHOST: 127.0.0.1
           PGUSER: pcoe_de_signage
           RAILS_ENV: test
-      - image: circleci/postgres:9.6.16-alpine
-        environment:
-          POSTGRES_USER: pcoe_de_signage
-          POSTGRES_DB: pcoe_de_signage_test
-          POSTGRES_PASSWORD: ""
+      # - image: circleci/postgres:9.6.16-alpine
+      #   environment:
+      #     POSTGRES_USER: pcoe_de_signage
+      #     POSTGRES_DB: pcoe_de_signage_test
+      #     POSTGRES_PASSWORD: ""
     environment:
-      - DATABASE_URL: "postgres://pcoe_de_signage@localhost:5432/pcoe_de_signage_test"
+      # - DATABASE_URL: "postgres://pcoe_de_signage@localhost:5432/pcoe_de_signage_test"
       - COVERAGE: "true"
 
     steps:
@@ -47,9 +47,9 @@ jobs:
           name: Install Rake and Brakeman
           command: gem install bundler rake brakeman
 
-      - run:
-          name: Wait for Postgres
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      # - run:
+      #     name: Wait for Postgres
+      #     command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       - run:
           name: Update Apt
