--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           PGHOST: 127.0.0.1
           PGUSER: pcoe_de_signage
           RAILS_ENV: test
+      - image: selenium/standalone-chrome:3.4.0
       # - image: circleci/postgres:9.6.16-alpine
       #   environment:
       #     POSTGRES_USER: pcoe_de_signage
