--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,43 @@
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 10 } %>
+#   timeout: 5000
+
+# development:
+#   <<: *default
+#   database: pcoe_de_signage_development
+
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#   <<: *default
+#   database: pcoe_de_signage_test
+
+# production:
+#   <<: *default
+#   database: pcoe_de_signage_production
+#   username: pcoe_de_signage
+#   password: <%= ENV['DATABASE_PASSWORD'] %>
+
+# FOR sqlite3
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 10 } %>
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: pcoe_de_signage_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: pcoe_de_signage_test
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: pcoe_de_signage_production
-  username: pcoe_de_signage
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  database: db/production.sqlite3
