Configure SMTP server in production and make 'from' address configurable

--- a/config/system_configuration.yml
+++ b/config/system_configuration.yml
@@ -9,6 +9,7 @@ web:
   room_policies: >
 
 emails:
+  from: "DoNotReply@ohio.edu"
   verification:
     subject: PCOE Project Room Verification
     body: >
