--- a/config/system_configuration.yml
+++ b/config/system_configuration.yml
@@ -1,50 +1,42 @@
 domain: ohio.edu
 web:
   approved: >
-    Lorem Ipsum is simply dummy...
+    After verifying your email address, your project room request has been approved.
   declined: >
-    Lorem Ipsum is simply dummy...
+    We’re sorry, but your project room request has been declined. If you think this has been an error, please
+    visit the CTC to clarify.
   pending: >
-    Lorem Ipsum is simply dummy...
+    Thank you for verifying your email address. Your project room request is pending approval of one of
+    our administrators.
   room_policies: >
 
 emails:
   from: "DoNotReply@ohio.edu"
+  signature: >
+    If you have any questions about this email or the Project Rooms,
+    please stop by the CTC on the 2nd floor of McCracken Hall.
   verification:
-    subject: PCOE Project Room Verification
+    subject: "PCOE Project Room Verification"
     body: >
-      here is a body
-      that is multiple lines
+      You are receiving this email because you scheduled a project room and we need to verify your email.
 
-      And then another thing happens
+      To verify, click the button below.
+    cta:
+      text: Verify!
   approved:
     subject: "PCOE Project Room Event: Approved"
     body: >
-      here is a body
-      that is multiple lines
-
-      And then another thing happens
+      Your project room request has been approved. You can now use the room at the time requested below.
   declined:
     subject: "PCOE Project Room Event: Declined"
     body: >
-      here is a body
-      that is multiple lines
-
-      And then another thing happens
-  pending:
-    subject: "PCOE Project Room Event: Awaiting Approval"
-    body: >
-      here is a body
-      that is multiple lines
-
-      And then another thing happens
+      We’re sorry, but your project room request has been declined. If you think this has been an error, please
+      contact someone at the CTC to clarify.
   post_event:
     subject: "PCOE Project Room Event: Follow Up"
     body: >
-      here is a body
-      that is multiple lines
-
-      And then another thing happens
+      We hope your project room event went well. To improve the spaces and ensure the spaces continue to meet
+      your needs, please take this survey to give us feedback on the space for the event below
 duration:
   default: 30
   options:
