Placing room policies as Markdown

--- a/config/system_configuration.yml
+++ b/config/system_configuration.yml
@@ -8,10 +8,16 @@ web:
   pending: >
     Thank you for verifying your email address. Your project room request is pending approval of one of
     our administrators.
-  room_policies: >
-    Room Policies TODO
+  room_policies: |
+    # Project Room Policies
 
-    Policy Two
+    - **Reservations must be placed by filling out the online form.**
+    - A valid Ohio University email address is required to reserve a project room, and your major must be within The Patton College.
+    - **Please reserve your room at least 12 hours before you wish to use it in order to ensure the DAATC has time to review your request.**
+    - Once your reservation has been approved, you will receive notification by email, and will need to stop by the DAATC front desk to have staff unlock the room.
+    - Please note there must be a minimum occupancy (2 people) for each room before making your request. Reservations not meeting the occupancy requirements may be denied during times when there is heavy demand.
+    - All food and drink must be cleaned up before you leave so that the room is ready for the next user. You will be charged a fee if cleanup/maintenance is required after your reservation is complete.
+    - You must shut off the lights and lock the door when you leave.
 emails:
   from: "DoNotReply@ohio.edu"
   signature: >
