--- a/config/system_configuration.yml
+++ b/config/system_configuration.yml
@@ -41,10 +41,12 @@ emails:
       We’re sorry, but your project room request has been declined. If you think this has been an error, please
       contact someone at the CTC to clarify.
   post_event:
-    subject: "PCOE Project Room Event: Follow Up"
+    subject: "PCOE Project Room Event: How was your event?"
     body: >
       We hope your project room event went well. To improve the spaces and ensure the spaces continue to meet
-      your needs, please take this survey to give us feedback on the space for the event below
+      your needs, please take this survey to give us feedback on the space for the event below.
+
+      https://ohio.qualtrics.com/the-awesome-survey
 duration:
   default: 30
   options:
