--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,13 +1,10 @@
 domain: ohio.edu
 web:
-  approved: >
-    After verifying your email address, your project room request has been approved.
-  declined: >
-    We’re sorry, but your project room request has been declined. If you think this has been an error, please
-    visit the CTC to clarify.
-  pending: >
-    Thank you for verifying your email address. Your project room request is pending approval of one of
-    our administrators.
+  requested: Event request received. Please check your email to confirm your request.
+  approved: After verifying your email address, your project room request has been approved.
+  declined: We’re sorry, but your project room request has been declined. If you think this has been an error, please visit the CTC to clarify.
+  pending: Thank you for verifying your email address. Your project room request is pending approval of one of our administrators.
+  finished: Your event has finished. Please check your email to get a link to a feedback survey.
   room_policies: |
     # Project Room Policies
 
@@ -20,12 +17,12 @@ web:
     - You must shut off the lights and lock the door when you leave.
 emails:
   from: "DoNotReply@ohio.edu"
-  signature: >
+  signature: |
     If you have any questions about this email or the Project Rooms,
     please stop by the CTC on the 2nd floor of McCracken Hall.
   verification:
     subject: "PCOE Project Room Verification"
-    body: >
+    body: |
       You are receiving this email because you scheduled a project room and we need to verify your email.
 
       To verify, click the button below.
@@ -33,16 +30,16 @@ emails:
       text: Verify!
   approved:
     subject: "PCOE Project Room Event: Approved"
-    body: >
+    body: |
       Your project room request has been approved. You can now use the room at the time requested below.
   declined:
     subject: "PCOE Project Room Event: Declined"
-    body: >
+    body: |
       We’re sorry, but your project room request has been declined. If you think this has been an error, please
       contact someone at the CTC to clarify.
   post_event:
     subject: "PCOE Project Room Event: How was your event?"
-    body: >
+    body: |
       We hope your project room event went well. To improve the spaces and ensure the spaces continue to meet
       your needs, please take this survey to give us feedback on the space for the event below.
 
